header: Impostazione struttura parte 1

--- a/index.html
+++ b/index.html
@@ -7,7 +7,50 @@
   </head>
   <body>
 
-    <p>prova</p>
+    <header>
+
+      <div class="Intestazione">
+
+        <div class="logo">
+
+          <img src="https://cdn.fluentify.com/bundles/fluentifypublic/images/logo.svg?v16" alt="Logo">
+
+        </div>
+
+        <nav>
+          <ul>
+            <li>Il metodo</li>
+            <li>la tecnologia</li>
+            <li>real-life english</li>
+            <li>soluzioni aziendali</li>
+          </ul>
+        </nav>
+
+        <div class="StrumentiUtente">
+
+          <div class="DiventaTutor">
+
+          </div>
+
+          <div class="Login">
+
+          </div>
+
+          <div class="StrutturaUnPiano">
+
+          </div>
+
+          <div class="MenuBurger">
+
+          </div>
+
+
+        </div>
+
+      </div>
+
+    </header>
+
 
   </body>
 </html>
