header: Impostazione struttura parte 2

--- a/index.html
+++ b/index.html
@@ -30,22 +30,34 @@
 
           <div class="DiventaTutor">
 
+            <p>diventa un tutor</p>
+
           </div>
 
           <div class="Login">
+
+            <p>login</p>
 
           </div>
 
           <div class="StrutturaUnPiano">
 
+            <p>struttura un piano</p>
+
           </div>
 
           <div class="MenuBurger">
+
+            <p>M</p>
 
           </div>
 
 
         </div>
+
+      </div>
+
+      <div class="SottoIntestazione">
 
       </div>
 
