header: Impostazione struttura parte 3. Fine Intestazione

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Replica Fluentify</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/18da76cc27.js" crossorigin="anonymous"></script>
   </head>
   <body>
 
@@ -48,7 +49,7 @@
 
           <div class="MenuBurger">
 
-            <p>M</p>
+            <p><i class="fas fa-bars"></i></p>
 
           </div>
 
