Header: Sottointestazione parte 1

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
           </div>
 
-          <div class="StrutturaUnPiano">
+          <div class="IntestazioneStrutturaUnPiano">
 
             <p>struttura un piano</p>
 
@@ -59,6 +59,16 @@
       </div>
 
       <div class="SottoIntestazione">
+
+        <h1>Scegli l'inglese studiato per i professionisti</h1>
+
+        <div class="StrutturaUnPiano">
+
+          <p>struttura un piano</p>
+
+        </div>
+
+
 
       </div>
 
